--- a/index.html
+++ b/index.html
@@ -1,138 +1,84 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
   <title>Biodata</title>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+  <!-- Font Awesome CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
 </head>
 
 <body>
-  <div class="w-screen h-auto flex justify-center flex-col items-center space-y-8 bg-[#0f172a] text-white py-8">
-    <div class="rounded-full border-4 border-sky-400 p-2">
-      <img src="./me.jpg" width="200" height="200" class="rounded-full hover:scale-105 transition transition" />
-    </div>
-    <div class="flex flex-col space-y-4 items-center justify-center">
-      <div>
-        <h1 class="text-3xl font-bold px-2">Hai, saya Moch. Avin</h1>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
+    <div class="container">
+      <a class="navbar-brand" href="/">Biodata</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/">Profil</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./sekolah/">Sekolah</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/fav-link/">Website Favorit</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/video/">Video Favorit</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#Projects">Projects</a>
+          </li>
+        </ul>
       </div>
-      <div>
-        <table class="border-separate border-spacing-2">
+    </div>
+  </nav>
+
+  <div class="container mt-5">
+    <div class="row" id="profil">
+      <div class="col-md-4 text-center">
+        <div class="p-2">
+          <img src="./assets/me.jpg" alt="Profil Image" width="200" height="200"
+            class="rounded-circle img-fluid border border-primary p-2 mx-auto">
+        </div>
+        <h2 class="mt-3">Hai, saya Moch. Avin</h2>
+      </div>
+      <div class="col-md-8 mt-4">
+        <h2 class="text-center">Informasi Personal</h2>
+        <table class="table mt-3">
           <tr>
-            <td>NRP</td>
-            <td>:</td>
+            <th>NRP</th>
             <td>5025221061</td>
           </tr>
           <tr>
-            <td>Alamat tinggal</td>
-            <td>:</td>
+            <th>Alamat tinggal</th>
             <td>Asrama ITS</td>
           </tr>
           <tr>
-            <td>NO HP</td>
-            <td>:</td>
+            <th>NO HP</th>
             <td>085236871039</td>
           </tr>
           <tr>
-            <td>Harapan dengan matkul pbw</td>
-            <td>:</td>
+            <th>Harapan di matkul pweb</th>
             <td>Mendapat ilmu baru</td>
           </tr>
         </table>
       </div>
-      <div class="w-full h-auto flex flex-col space-y-4 justify-center items-center">
-        <div class="text-3xl font-[600] max-md:text-sm">Alamat SMA</div>
-        <div class="">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.266865695523!2d112.6799208096497!3d-7.654428475700978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7d9381e4967bd%3A0xca04772f2b81d0b7!2sSMA%20NEGERI%201%20PANDAAN!5e0!3m2!1sid!2sid!4v1693655125930!5m2!1sid!2sid"
-            width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade" class="rounded-xl max-md:w-auto"></iframe>
-        </div>
-      </div>
-      <div class="w-1/2 h-auto flex flex-col space-y-4 justify-center items-center">
-        <div class="text-3xl font-[600] max-md:text-sm">10 Link Website Favorit</div>
-        <div class="flex flex-col w-full text-sky-100 bg-sky-950 font-[600] rounded-xl max-md:w-screen">
-          <div class="flex flex-row">
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://google.com"> Google </a>
-            </div>
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://chat.openai.com/"> ChatGPT </a>
-            </div>
-          </div>
-          <div class="flex flex-row">
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://its.ac.id/"> ITS </a>
-            </div>
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://github.com/"> Github </a>
-            </div>
-          </div>
-          <div class="flex flex-row">
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://www.youtube.com/"> Youtube </a>
-            </div>
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://codeforces.com/"> Codeforces </a>
-            </div>
-          </div>
-          <div class="flex flex-row">
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://www.hackerrank.com/"> Hackerrank </a>
-            </div>
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://tailwindcss.com/"> Tailwind Doc </a>
-            </div>
-          </div>
-          <div class="flex flex-row">
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://otakudesu.lol/"> Otakudesu </a>
-            </div>
-            <div
-              class="basis-1/2 flex justify-center hover:bg-sky-900 py-2 rounded-xl cursor-pointer hover:scale-105 transition">
-              <a href="https://atcoder.jp/"> Atcoder </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="text-3xl font-[600] max-md:text-sm">
-        Video Youtube Favorit
-      </div>
-      <div class="flex flex-wrap w-full justify-center">
-        <div>
-          <iframe width="500" height="280" class="px-2 py-2 rounded-2xl max-md:w-auto border mx-2 my-2"
-            src="https://www.youtube-nocookie.com/embed/WsPHBD5NsS0?si=tfzk29TsHocxjwuA" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        </div>
-        <div>
-          <iframe width="500" height="280" class="px-2 py-2 rounded-2xl max-md:w-auto border mx-2 my-2"
-            src="https://www.youtube-nocookie.com/embed/FU_YFpfDqqA?si=1jWOJZfy2usRPXTQ" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        </div>
-        <div>
-          <iframe width="500" height="280" class="px-2 py-2 rounded-2xl max-md:w-auto border mx-2 my-2"
-            src="https://www.youtube-nocookie.com/embed/z6ep308goxQ?si=_bUhfuh5qsXu8GHT" title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-            allowfullscreen></iframe>
-        </div>
-      </div>
     </div>
   </div>
+  
+
+  <!-- Bootstrap JS, Popper.js, and jQuery -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
