--- a/projects/index.html
+++ b/projects/index.html
@@ -28,13 +28,13 @@
             <a class="nav-link" href="../sekolah/">Sekolah</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/fav-link/">Website Favorit</a>
+            <a class="nav-link" href="../fav-link/">Website Favorit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/video">Video Favorit</a>
+            <a class="nav-link" href="../video/">Video Favorit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Projects">Projects</a>
+            <a class="nav-link" href="../projects/">Projects</a>
           </li>
         </ul>
       </div>
@@ -61,29 +61,22 @@
             </div>
             <div class="row">
               <div class="col-12">
-                <a href="https://github.com" class="btn btn-light btn-block mb-2" target="_blank">
-                  Github
+                <a href="https://mochavin.github.io/tugas-pweb-2/" class="btn btn-light btn-block mb-2" target="_blank">
+                  Biodata v2
                 </a>
               </div>
             </div>
             <div class="row">
               <div class="col-12">
-                <a href="https://www.youtube.com" class="btn btn-light btn-block mb-2" target="_blank">
-                  Youtube
+                <a href="https://github.com/mochavin/cinema-app" class="btn btn-light btn-block mb-2" target="_blank">
+                  Cinema App
                 </a>
               </div>
             </div>
             <div class="row">
               <div class="col-12">
-                <a href="https://tailwindcss.com" class="btn btn-light btn-block mb-2" target="_blank">
-                  Tailwind
-                </a>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-12">
-                <a href="https://atcoder.jp" class="btn btn-light btn-block mb-2" target="_blank">
-                  Atcoder
+                <a href="https://mochavin.github.io/weight-converter/dist/" class="btn btn-light btn-block mb-2" target="_blank">
+                  Weight Converter
                 </a>
               </div>
             </div>
