--- a/sekolah/index.html
+++ b/sekolah/index.html
@@ -28,13 +28,13 @@
             <a class="nav-link" href="/">Sekolah</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/fav-link/">Website Favorit</a>
+            <a class="nav-link" href="../fav-link/">Website Favorit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/video/">Video Favorit</a>
+            <a class="nav-link" href="../video/">Video Favorit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Projects">Projects</a>
+            <a class="nav-link" href="../projects">Projects</a>
           </li>
         </ul>
       </div>
