--- a/video/index.html
+++ b/video/index.html
@@ -28,13 +28,13 @@
             <a class="nav-link" href="../sekolah/">Sekolah</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/fav-link/">Website Favorit</a>
+            <a class="nav-link" href="../fav-link/">Website Favorit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#video">Video Favorit</a>
+            <a class="nav-link" href="/">Video Favorit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Projects">Projects</a>
+            <a class="nav-link" href="../projects/">Projects</a>
           </li>
         </ul>
       </div>
