feat:ilustrasi setiap page

--- a/fav-link/index.html
+++ b/fav-link/index.html
@@ -42,15 +42,18 @@
   </nav>
   <div class="container">
     <div class="row justify-content-center mt-4 p-4" id="website">
-      <div class="col-12 col-md-6 text-center">
-        <h2 class="font-weight-bold ">10 Link Website Favorit</h2>
-        <p class="text-left">
-          Berikut adalah daftar 10 link favorit yang saya simpan. Setiap link ini mengarah ke situs web atau halaman
-          online yang saya sukai dan gunakan secara rutin. Masing-masing link ini memberikan nilai dan manfaat berbeda
-          dalam aktivitas sehari-hari dan minat pribadi saya
-        </p>
+      <div class="col-md-6 d-flex justify-content-center p-4">
+        <img src="./www.png" alt="www" class="img-fluid p-4"  />
       </div>
       <div class="col-12 col-md-6">
+        <div>
+          <h2 class="font-weight-bold ">10 Link Website Favorit</h2>
+          <p class="text-left">
+            Berikut adalah daftar 10 link favorit yang saya simpan. Setiap link ini mengarah ke situs web atau halaman
+            online yang saya sukai dan gunakan secara rutin. Masing-masing link ini memberikan nilai dan manfaat berbeda
+            dalam aktivitas sehari-hari dan minat pribadi saya
+          </p>
+        </div>
         <div class="card text-white bg-dark rounded-lg">
           <div class="card-body">
             <div class="row">
