--- a/projects/index.html
+++ b/projects/index.html
@@ -42,14 +42,17 @@
   </nav>
   <div class="container">
     <div class="row justify-content-center mt-4 p-4" id="website">
-      <div class="col-12 col-md-6 text-center">
-        <h2 class="font-weight-bold ">My Projects</h2>
-        <p class="text-left">
-          Berikut adalah daftar project yang saya buat. Setiap project ini mengarah ke situs web atau halaman online
-          yang saya buat.
-        </p>
+      <div class="col-12 col-md-6 text-center mt-4 pt-2">
+        <img src="./project.png" alt="project" class="img-fluid p-4 w-50" />
       </div>
       <div class="col-12 col-md-6">
+        <div>
+          <h2 class="font-weight-bold ">My Projects</h2>
+          <p class="text-left">
+            Berikut adalah daftar project yang saya buat. Setiap project ini mengarah ke situs web atau halaman online
+            yang saya buat.
+          </p>
+        </div>
         <div class="card text-white bg-dark rounded-lg">
           <div class="card-body">
             <div class="row">
@@ -75,7 +78,8 @@
             </div>
             <div class="row">
               <div class="col-12">
-                <a href="https://mochavin.github.io/weight-converter/dist/" class="btn btn-light btn-block mb-2" target="_blank">
+                <a href="https://mochavin.github.io/weight-converter/dist/" class="btn btn-light btn-block mb-2"
+                  target="_blank">
                   Weight Converter
                 </a>
               </div>
