--- a/video/index.html
+++ b/video/index.html
@@ -42,14 +42,17 @@
   </nav>
   <div class="container p-4">
     <div class="row">
-      <div class="mt-5 col-md-6">
-        <h2 class="text-center">Video Youtube Favorit</h2>
-        <p>
-          Berikut adalah daftar 3 video favorit yang saya simpan. Setiap video ini mengarah ke video youtube yang saya
-          sukai. 
-        </p>
+      <div class="col-md-6 d-flex justify-content-center p-4">
+        <img src="./video.png" alt="youtube" class="img-fluid p-4"  />
       </div>
-      <div class="mt-5 col-md-6 text-right">
+      <div class="mt-5 col-md-6">
+        <div>
+          <h2 class="text-center">Video Youtube Favorit</h2>
+          <p>
+            Berikut adalah daftar 3 video favorit yang saya simpan. Setiap video ini mengarah ke video youtube yang saya
+            sukai.
+          </p>
+        </div>
         <div id="videoCarousel" class="carousel slide" data-ride="carousel" data-interval="2000">
           <ol class="carousel-indicators">
             <li data-target="#videoCarousel" data-slide-to="0" class="active"></li>
