fix:layout and link

--- a/fav-link/index.html
+++ b/fav-link/index.html
@@ -47,7 +47,7 @@
       </div>
       <div class="col-12 col-md-6">
         <div>
-          <h2 class="font-weight-bold ">10 Link Website Favorit</h2>
+          <h2 class="">10 Link Website Favorit</h2>
           <p class="text-left">
             Berikut adalah daftar 10 link favorit yang saya simpan. Setiap link ini mengarah ke situs web atau halaman
             online yang saya sukai dan gunakan secara rutin. Masing-masing link ini memberikan nilai dan manfaat berbeda
