--- a/projects/index.html
+++ b/projects/index.html
@@ -41,13 +41,13 @@
     </div>
   </nav>
   <div class="container">
-    <div class="row justify-content-center mt-4 p-4" id="website">
-      <div class="col-12 col-md-6 text-center mt-4 pt-2">
-        <img src="./project.png" alt="project" class="img-fluid p-4 w-50" />
+    <div class="row justify-content-center p-4">
+      <div class="col-md-6 d-flex justify-content-center p-4">
+        <img src="./project.png" alt="project" class="img-fluid p-4" />
       </div>
-      <div class="col-12 col-md-6">
+      <div class="col-12 col-md-6 mt-4">
         <div>
-          <h2 class="font-weight-bold ">My Projects</h2>
+          <h2 class="">My Projects</h2>
           <p class="text-left">
             Berikut adalah daftar project yang saya buat. Setiap project ini mengarah ke situs web atau halaman online
             yang saya buat.
