--- a/video/index.html
+++ b/video/index.html
@@ -40,14 +40,14 @@
       </div>
     </div>
   </nav>
-  <div class="container p-4">
-    <div class="row">
+  <div class="container">
+    <div class="row justify-content-center">
       <div class="col-md-6 d-flex justify-content-center p-4">
         <img src="./video.png" alt="youtube" class="img-fluid p-4"  />
       </div>
-      <div class="mt-5 col-md-6">
+      <div class="col-12 col-md-6 mt-5">
         <div>
-          <h2 class="text-center">Video Youtube Favorit</h2>
+          <h2 class="text-left">Video Youtube Favorit</h2>
           <p>
             Berikut adalah daftar 3 video favorit yang saya simpan. Setiap video ini mengarah ke video youtube yang saya
             sukai.
