--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/">Profil</a>
+            <a class="nav-link" href="#">Profil</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./sekolah/">Sekolah</a>
