--- a/sekolah/index.html
+++ b/sekolah/index.html
@@ -93,7 +93,7 @@
         </div>
       </div>
       <div class="col-md-5">
-        <h2 class="text-center mb-4">Alamat SMA</h2>
+        <h2 class="mb-4">Alamat SMA</h2>
         <div class="embed-responsive embed-responsive-16by9">
           <iframe class="embed-responsive-item"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3954.266865695523!2d112.6799208096497!3d-7.654428475700978!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd7d9381e4967bd%3A0xca04772f2b81d0b7!2sSMA%20NEGERI%201%20PANDAAN!5e0!3m2!1sid!2sid!4v1693655125930!5m2!1sid!2sid"
